[package]
edition = "2018"
name = "actions-toolkit-sys"
version = "0.2.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["github"]
repository = "https://github.com/freebroccolo/actions-toolkit-sys"
description = """
Raw bindings to the GitHub actions toolkit API for projects using wasm-bindgen.
"""

[features]

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
cfg-if = "^0.1.10"

[dependencies.js-sys]
version = "^0.3.28"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.51"
features = ["nightly"]

[dev-dependencies]
wasm-bindgen-test = { version = "=0.2.50" }
